WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214581
Unable to call WKScriptMessageHandlerWithReply's replyHandler with a nil errorMessage in Swift
https://bugs.webkit.org/show_bug.cgi?id=214581
Summary
Unable to call WKScriptMessageHandlerWithReply's replyHandler with a nil erro...
James Savage
Reported
2020-07-20 18:07:32 PDT
<
rdar://problem/65639342
>
Attachments
Patch
(1.94 KB, patch)
2020-07-20 18:12 PDT
,
James Savage
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Savage
Comment 1
2020-07-20 18:12:42 PDT
Created
attachment 404784
[details]
Patch
EWS
Comment 2
2020-07-21 14:03:03 PDT
Committed
r264675
: <
https://trac.webkit.org/changeset/264675
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404784
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug