Unable to call WKScriptMessageHandlerWithReply's replyHandler with a nil errorMessage in Swift https://bugs.webkit.org/show_bug.cgi?id=214581 <rdar://problem/65639342>

Reviewed by Brady Eidson.

* UIProcess/API/Cocoa/WKScriptMessageHandlerWithReply.h: Modify the block
signature to allow nil for either argument.


Canonical link: https://commits.webkit.org/227420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264675 268f45cc-cd09-0410-ab3c-d52691b4dbfc